@@ -588,6 +588,12 @@ class RMagics(Magics):
         (that is rpy2\'s default converter + numpy converter + pandas converter
         if all three are available)."""))
     @argument(
+        '-d', '--display',
+        default=None,
+        help=textwrap.dedent("""
+        Name of function to use to display the output of an R cell.
+        """))
+    @argument(
         'code',
         nargs='*',
         )
@@ -722,6 +728,17 @@ class RMagics(Magics):
                 with localconverter(converter) as cv:
                     ro.r.assign(input, val)
 
+        if args.display:
+            try:
+                cell_display = local_ns[args.display]
+            except KeyError:
+                try:
+                    cell_display = self.shell.user_ns[args.display]
+                except KeyError:
+                    raise NameError("name '%s' is not defined" % args.display)
+        else:
+            cell_display = ro.r.show
+
         tmpd = self.setup_graphics(args)
 
         text_output = ''
@@ -747,7 +764,7 @@ class RMagics(Magics):
                                                .callbacks,
                                                'consolewrite_print',
                                                self.write_console_regular))
-                        ro.r.show(result)
+                        cell_display(result)
                         text_output += self.flush()
 
         except RInterpreterError as e:
